# smp02

./: .gitattributes  .gitignore  README.md  old_readme.md  pyproject.toml  requirements.txt
configs/: agent_250.yaml  agent_250_smoke.yaml  pievo_faithful_250.yaml  pievo_faithful_active_evidence_bridge_smoke.yaml  pievo_faithful_ensemble_guard_195_smoke.yaml  pievo_faithful_feedback_aware_llm_rag_195_smoke.yaml  pievo_faithful_feedback_replacement_195_smoke.yaml  pievo_faithful_ledger_smoke.yaml  pievo_faithful_replacement_195_smoke.yaml  pievo_faithful_smoke.yaml  pievo_faithful_vae_latent_local_search_195_smoke.yaml  reproduce.yaml  smoke.yaml
data/: SMP_Dataset.xlsx
docs/: closed_loop_workflow.md  functional_group_classification_and_matching.md  generation_strategy_and_harness.md  out_of_library_agent_formalization.md  paper_reproduction_notes.md  pievo_faithful_smp.md  real_experiment_feedback_loop.md  smp_knowledge_base_and_ontology.md  smp_research_system_plan.md
molecodetest/: README.md  requirements.txt  verify_molecode.py
paper/: pol20241095-sup-0001-supinfo.docx
reports/: active_evidence_pievo_bridge.md  active_high_authority_observation_ledger.md  candidate_source_audit.md  candidate_source_audit_expanded.md  diffusion_flow_candidate_generator_dry_run.md  diffusion_flow_trained_generator.md  expanded_inventory_feedback_aware_llm_rag_agent.md  expanded_inventory_replacement_evaluation.md  expanded_inventory_replacement_generation_records.md  external_generator_output_checklist.md  feedback_aware_llm_rag_agent.md  generation_failure_feedback.md  (+62 more)
(+1085 files in other folders)
