[project]
name = "smp02"
version = "0.1.0"
description = "Reproduction workflow for ML-driven discovery of thermoset shape memory polymers."
requires-python = ">=3.10"
dependencies = [
  "catboost",
  "joblib",
  "lightgbm",
  "matplotlib",
  "networkx",
  "ngboost",
  "numpy",
  "openpyxl",
  "pandas",
  "python-docx",
  "pyyaml",
  "rdkit",
  "scikit-learn",
  "seaborn",
  "torch",
  "torch-geometric",
  "tqdm",
  "xgboost",
]

[project.scripts]
smp02 = "smp02.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
